--- a/Sistema de Cadastro e Login de Usuários/nbproject/project.properties
+++ b/Sistema de Cadastro e Login de Usuários/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_de_Cadastro_e_Login_de_Usu_rios
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin__1_.jar.zip=lib\\mysql-connector-java-5.1.23-bin (1).jar.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.23-bin__1_.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Sistema_de_Cadastro_e_Login_de_Usu_rios
-main.class=
+main.class=gui.TelaLoginOuCadastro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
